--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
 
     <body>
         <header>
-            <img src="images/logo.png" class="logo" alt="Portfolio Logo" height="125" width="375" class="img-fluid logo">
+            <img src="images/logo.PNG" class="logo" alt="Portfolio Logo" height="125" width="375" class="img-fluid logo">
         </header>
 
         <nav>
