--- a/htmlcss.html
+++ b/htmlcss.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>PORTFOLIO::HTML/CSS</title>
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-        <meta name="description" content="This page highlights additional skills in HTML and CSS">
+        <meta name="description" content="This page highlights additional skills in HTML, CSS, and Multimedia">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">  
         <link rel="stylesheet" href="finalproject.css">  
@@ -14,7 +14,7 @@
 
     <body>
         <header>
-            <img src="images/logo.PNG" class="logo" alt="Portfolio Logo" height="125" width="375" class="img-fluid logo">
+            <img src="images/logo.png" class="img-fluid logo" alt="Portfolio Logo" height="125" width="375">
         </header>
 
         <nav>
@@ -30,7 +30,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h2>Examples of HTML and CSS</h2> 
+                        <h2>Further examples of HTML, CSS, and Multimedia design</h2> 
                         <h3>Table</h3>
                         <table>
                             <caption>Colors and Associated Words</caption>
@@ -62,7 +62,7 @@
                         </table>
                         <h3>Google Map</h3>
                         <p>This is a map to Saint Paul College, where I'm currently taking classes.</p>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2823.732055529509!2d-93.11344968458816!3d44.9491146790982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87f62aa4b9cbd887%3A0xee7598b8b07f1abc!2sSaint%20Paul%20College!5e0!3m2!1sen!2sus!4v1646965778446!5m2!1sen!2sus" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2823.732055529509!2d-93.11344968458816!3d44.9491146790982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87f62aa4b9cbd887%3A0xee7598b8b07f1abc!2sSaint%20Paul%20College!5e0!3m2!1sen!2sus!4v1646965778446!5m2!1sen!2sus" width="100%" height="400" class="map" allowfullscreen="" loading="lazy"></iframe>
                         
                         <h3>Youtube</h3>
                         <p>This is a cute video of baby goat.</p>
@@ -71,7 +71,7 @@
                         </div>
                         <h3>SoundCloud</h3>
                         <p>This is my favorite song right now.</p>
-                        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/983250277&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/manchesterorchestra" title="Manchester Orchestra" target="_blank" style="color: #cccccc; text-decoration: none;">Manchester Orchestra</a> · <a href="https://soundcloud.com/manchesterorchestra/bed-head" title="Bed Head" target="_blank" style="color: #cccccc; text-decoration: none;">Bed Head</a></div>
+                        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/983250277&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div><a href="https://soundcloud.com/manchesterorchestra" title="Manchester Orchestra" target="_blank" class="soundcloud">Manchester Orchestra</a> · <a href="https://soundcloud.com/manchesterorchestra/bed-head" title="Bed Head" target="_blank" class="soundcloud">Bed Head</a></div>
                         <h3>Form</h3>
                         <form method="post" action="https://webdevstudents.com/portfolio/submit-form.php">
                            <div class="row">
@@ -106,14 +106,15 @@
                 </div>
             </div>
         </main>
+
         <!--footer and social media info-->
         <footer>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-sm-6" style="text-align: center">
+                    <div class="col-sm-6 textcenter">
                         <h3>Julia Miller - Portfolio Site</h3>
                     </div>
-                    <div class="col-sm-6 my-auto" style="text-align: left">
+                    <div class="col-sm-6 my-auto textleft">
                         <div>
                             <a href="mailto:jsmiller1220@gmail.com">
                             <i class="fa fa-envelope" aria-hidden="true"></i> Email me
