--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <body>
         <header>
-            <img src="images/logo.PNG" class="logo" alt="Portfolio Logo" height="125" width="375" class="img-fluid logo">
+            <img src="images/logo.png" class="img-fluid logo" alt="Portfolio Logo" height="125" width="375">
         </header>
 
         <nav>
@@ -56,10 +56,10 @@
         <footer>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-sm-6" style="text-align: center">
+                    <div class="col-sm-6 textcenter">
                         <h3>Julia Miller - Portfolio Site</h3>
                     </div>
-                    <div class="col-sm-6 my-auto" style="text-align: left">
+                    <div class="col-sm-6 my-auto textleft">
                         <div>
                             <a href="mailto:jsmiller1220@gmail.com">
                             <i class="fa fa-envelope" aria-hidden="true"></i> Email me
