--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>PORTFOLIO::TABLE</title>
+        <title>PORTFOLIO::EXAMPLES</title>
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-        <meta name="description" content="This page highlights skills in developing tables for websites.">
+        <meta name="description" content="This page shows two other examples of websites.">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">   
         <link rel="stylesheet" href="finalproject.css">  
@@ -14,7 +14,7 @@
 
     <body>
         <header>
-            <img src="images/logo.PNG" class="logo" alt="Portfolio Logo" height="125" width="375" class="img-fluid logo">
+            <img src="images/logo.png" class="img-fluid logo" alt="Portfolio Logo" height="125" width="375">
         </header>
 
         <nav>
@@ -62,10 +62,10 @@
         <footer>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-sm-6" style="text-align: center">
+                    <div class="col-sm-6 textcenter">
                         <h3>Julia Miller - Portfolio Site</h3>
                     </div>
-                    <div class="col-sm-6 my-auto" style="text-align: left">
+                    <div class="col-sm-6 my-auto textleft">
                         <div>
                             <a href="mailto:jsmiller1220@gmail.com">
                             <i class="fa fa-envelope" aria-hidden="true"></i> Email me
