--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
 
     <body>
         <header>
-            <img src="images/logo.PNG" class="logo" alt="Portfolio Logo" height="125" width="375" class="img-fluid logo">
+            <img src="images/logo.png" class="img-fluid logo" alt="Portfolio Logo" height="125" width="375">
         </header>
 
         <nav>
@@ -76,14 +76,13 @@
             </main>
 
         <!--footer and social media info-->
-        <!--footer and social media info-->
         <footer>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-sm-6" style="text-align: center">
+                    <div class="col-sm-6 textcenter">
                         <h3>Julia Miller - Portfolio Site</h3>
                     </div>
-                    <div class="col-sm-6 my-auto" style="text-align: left">
+                    <div class="col-sm-6 my-auto textleft">
                         <div>
                             <a href="mailto:jsmiller1220@gmail.com">
                             <i class="fa fa-envelope" aria-hidden="true"></i> Email me
@@ -112,8 +111,9 @@
                 </div>
             </div>
         </footer>
+        <!--jQuery, Popper, and Bootstrap Javascript files-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-        </body>
-    </html>
+    </body>
+</html>
