--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
 
     <body>
         <header>
-            <img src="images/logo.png" class="img-fluid logo" alt="Portfolio Logo" height="125" width="375">
+            <img src="images/logo.PNG" class="img-fluid logo" alt="Portfolio Logo" height="125" width="375">
         </header>
 
         <nav>
