--- a/htmlcss.html
+++ b/htmlcss.html
@@ -14,7 +14,7 @@
 
     <body>
         <header>
-            <img src="images/logo.PNG" class="img-fluid logo" alt="Portfolio Logo" height="125" width="375">
+            <h1><img src="images/mushroom.png" class="img-fluid" alt="Portfolio Logo" height="100" width="100">JULIA MILLER</h1>
         </header>
 
         <nav>
